--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 #This repositiory houses scripts for analysis of lake data as well as ways to prepare data for analysis
 #Scripts include setup and running of GAMs for trend anysis, calculation of Sens slope for each lake, as well as access of metadata and temperature data for Sharma et al. dataset
+
+
+Data included as .csv files for analysis, including files where data is summarized
